Changed display to flex to fix alignment issues

--- a/client/src/components/Circle/Circle.css
+++ b/client/src/components/Circle/Circle.css
@@ -5,4 +5,10 @@
     border-radius: 50%;
     width:70px;
     height:70px;
+    display: flex;
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+    font-size: 1.5em;
+    justify-content: center;
+    align-items: center;
 }
